tests/NormalTests/paczka1/small_fuzzy/34949928.err
Error in line 3: lymyhNdOco A109 38,2
Error in line 8: lymyhNdOco S650 66,0
